Fixed the scrolling issue
Vertical and Horizontal scrolling has been removed.

--- a/Team450-CSE442/Team450Project/wwwroot/css/home.css
+++ b/Team450-CSE442/Team450Project/wwwroot/css/home.css
@@ -9,12 +9,19 @@ body, html {
 }
 
 .bg-image {
+   
     filter: blur(4px);
     -webkit-filter: blur(4px);
-    height: auto;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
+    height: auto;
+    width: auto;
+}
+#us-map-background {
+    box-sizing: border-box;
+    max-height: 99%;
+    max-width: 99%;
 }
 
 
@@ -48,12 +55,6 @@ body, html {
     border-radius: 15px;
     box-shadow: 0 9px #999;
     text-decoration: none;
-}
-
-#us-map-background {
-    box-sizing: border-box;
-    height: 99%;
-    width: 99%;
 }
 
 
